bizinikiwi/pezframe/support/test/tests/benchmark_ui/invalid_origin.stderr
error[E0277]: the trait bound `T: pezframe_system::Config` is not satisfied
  --> tests/benchmark_ui/invalid_origin.rs:30:8
   |
30 |         noop(1);
   |              ^ the trait `pezframe_system::Config` is not implemented for `T`
   |
help: consider further restricting type parameter `T` with trait `Config`
   |
23 | #[benchmarks], T: pezframe_system::Config
   |              ++++++++++++++++++++++++++++

error[E0277]: the trait bound `<T as pezframe_support_test::Config>::RuntimeOrigin: From<{integer}>` is not satisfied
  --> tests/benchmark_ui/invalid_origin.rs:30:8
   |
30 |         noop(1);
   |              ^ the trait `From<{integer}>` is not implemented for `<T as pezframe_support_test::Config>::RuntimeOrigin`
   |
   = note: required for `{integer}` to implement `Into<<T as pezframe_support_test::Config>::RuntimeOrigin>`
